--- a/lib/i18n/strings_ja.i18n.json
+++ b/lib/i18n/strings_ja.i18n.json
@@ -28,7 +28,7 @@
           "name": "名前",
           "addModel": "モデルを追加"
         },
-        "sttConfig": {
+        "speechToTextConfig": {
           "configType": "SPEECH TO TEXT",
           "title": "SPEECH TO TEXT設定",
           "models": "モデル",
@@ -36,7 +36,7 @@
           "name": "名前",
           "addModel": "モデルを追加"
         },
-        "ttsConfig": {
+        "textToSpeechConfig": {
           "configType": "TEXT TO SPEECH",
           "title": "TEXT TO SPEECH",
           "voices": "ボイス",
