Fix insert and update and delete cofing

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -10,6 +10,7 @@
       "serviceType": "Service Type:${serviceType}",
       "addService": "+ Add Service",
       "editService": "Edit Service",
+      "deleteService": "Delete Service",
       "serviceConfig": {
         "serviceAdd": "Add Service",
         "serviceEdit": "Edit Service",
