Changed to use sqflite (#14)
* Add sqflite

* fix UNIQUE models

* Fi support for patterns where map id is null

* remove debug log

* fix tts to text to speech, stt to speech to text

* remove !

* Fix insert and update and delete cofing

* Fix typo

* Fix modifying state directly

* Fix sqflite error pattern

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -10,6 +10,7 @@
       "serviceType": "Service Type:${serviceType}",
       "addService": "+ Add Service",
       "editService": "Edit Service",
+      "deleteService": "Delete Service",
       "serviceConfig": {
         "serviceAdd": "Add Service",
         "serviceEdit": "Edit Service",
@@ -28,7 +29,7 @@
           "name": "Name",
           "addModel": "Add Model"
         },
-        "sttConfig": {
+        "speechToTextConfig": {
           "configType": "SPEECH TO TEXT",
           "title": "SPEECH TO TEXT Settings",
           "models": "Models",
@@ -36,7 +37,7 @@
           "name": "Name",
           "addModel": "Add Model"
         },
-        "ttsConfig": {
+        "textToSpeechConfig": {
           "configType": "TEXT TO SPEECH",
           "title": "TEXT TO SPEECH Settings",
           "voices": "Voices",
