--- a/client/lib/i18n/strings.i18n.json
+++ b/client/lib/i18n/strings.i18n.json
@@ -3,113 +3,37 @@
   "home": {
     "title": "Karakuri Agent",
     "agent": {
-      "name": "Name:${name}",
+      "name": "Name: ${name}",
       "startTalk": "Start Talk",
-      "addAgent": "Add Agent",
+      "addAgent": "+ Add Agent",
       "editAgent": "Edit Agent",
-      "deleteAgent": "Delete Agent",
-      "textModel": "TEXT model:${name}",
-      "speechToTextModel": "SPEECH TO TEXT model:${name}",
-      "textToSpeechModel": "TEXT TO SPEECH model:${name}",
-      "textToSpeechVoice": "TEXT TO SPEECH voice:${name}",
-      "agentConfig": {
-        "agentAdd": "Add Agent",
-        "agentEdit": "Edit Agent",
-        "name": "Name",
-        "save": "Save",
-        "karakuriImage": "Karakuri Image",
-        "textService": "TEXT Service",
-        "textModel": "TEXT Model",
-        "speechToTextService": "SPEECH TO TEXT Service",
-        "speechToTextModel": "SPEECH TO TEXT Model",
-        "textToSpeechService": "TEXT TO SPEECH Service",
-        "textToSpeechModel": "TEXT TO SPEECH Model",
-        "textToSpeechVoice": "TEXT TO SPEECH Voice"
-      },
-      "error": {
-        "nameIsRequired": "Name is required",
-        "karakuriImageRequired": "Karakuri Image is required.",
-        "textServiceRequired": "TEXT Service is required",
-        "textModelRequired": "TEXT Model is required",
-        "speechToTextServiceRequired": "SPEECH TO TEXT Service is required",
-        "speechToTextModelRequired": "SPEECH TO TEXT Model is required",
-        "textToSpeechServiceRequired": "TEXT TO SPEECH Service is required",
-        "textToSpeechModelRequired": "TEXT TO SPEECH Model is required.",
-        "textToSpeechVoiceRequired": "TEXT TO SPEECH Voice is required."
-      }
+      "deleteAgent": "Delete Agent"
+    }
+  },
+  "agentConfig": {
+    "agentAdd": "Add Agent",
+    "agentEdit": "Edit Agent",
+    "name": "Name",
+    "save": "Save",
+    "baseUrl": "URL",
+    "apiKey": "API Key",
+    "agentId": "Agent ID",
+    "agentImage": "Agent Image",
+    "error": {
+      "nameIsRequired": "Name is required.",
+      "baseUrlRequired": "URL is required.",
+      "apiKeyRequired": "API Key is required.",
+      "agentIdequired": "Agent ID is required.",
+      "agentImageRequired": "Agent image is required."
     }
   },
   "talk": {
     "title": "Talk",
-    "start": "start",
-    "pause": "pause",
+    "start": "Start Talk",
+    "pause": "Stop Talk",
     "error": {
-      "startFailed": "An error occurred during talk.",
+      "startFailed": "An error occurred during the talk.",
       "pauseFailed": "An error occurred while ending the talk."
-    }
-  },
-  "settings": {
-    "serviceSettings": {
-      "title": "Service Settings",
-      "name": "Name:${name}",
-      "serviceType": "Service Type:${serviceType}",
-      "addService": "+ Add Service",
-      "editService": "Edit Service",
-      "deleteService": "Delete Service",
-      "serviceConfig": {
-        "serviceAdd": "Add Service",
-        "serviceEdit": "Edit Service",
-        "save": "Save",
-        "name": "Name",
-        "baseUrl": "URL",
-        "apiKey": "API Key",
-        "serviceType": "Service Type",
-        "configDelete": "Delete ${configType}",
-        "configAdd": "Add ${configType}",
-        "textConfig": {
-          "configType": "TEXT",
-          "title": "TEXT Settings",
-          "models": "Models",
-          "id": "ID",
-          "name": "Name",
-          "addModel": "Add Model"
-        },
-        "speechToTextConfig": {
-          "configType": "SPEECH TO TEXT",
-          "title": "SPEECH TO TEXT Settings",
-          "models": "Models",
-          "id": "ID",
-          "name": "Name",
-          "addModel": "Add Model"
-        },
-        "textToSpeechConfig": {
-          "configType": "TEXT TO SPEECH",
-          "title": "TEXT TO SPEECH Settings",
-          "models": "Models",
-          "voices": "Voices",
-          "id": "ID",
-          "name": "Name",
-          "addModel": "Add Model",
-          "addVoice": "Add Voice"
-        },
-        "error": {
-          "nameIsRequired": "Name is required",
-          "baseUrlIsRequired": "Base URL is required",
-          "apiKeyIsRequired": "API key is required",
-          "textModelKeyIsRequired": "Text model id is required",
-          "textModelValueIsRequired": "Text model name is required",
-          "duplicateTextModelkey": "Duplicate text model id found: ${key}",
-          "sttModelKeyIsRequired": "Speech to text model id is required",
-          "sttModelValueIsRequired": "Speech to text model name is required",
-          "duplicateSttModelkey": "Duplicate speech to text model id found: ${key}",
-          "ttsModelKeyIsRequired": "Text to speech voice id is required",
-          "ttsModelValueIsRequired": "Text to speech voice name is required",
-          "duplicateTtsModelkey": "Duplicate text to speech voice id found: ${key}",
-          "ttsVoiceKeyIsRequired": "Text to speech voice id is required",
-          "ttsVoiceValueIsRequired": "Text to speech voice name is required",
-          "duplicateTtsVoicekey": "Duplicate text to speech voice id found: ${key}"
-        }
-      }
     }
   }
 }
